--- a/SS5_Form_Table_Html/bai_tap/Bai5ThoiKhoaBieu.html
+++ b/SS5_Form_Table_Html/bai_tap/Bai5ThoiKhoaBieu.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="thoi_khoa_bieu.css"
 <head>
     <meta charset="UTF-8">
     <title>taobangdongian</title>
 </head>
 <body>
-    <h1>Thời khóa biểu lớp T0908I</h1>
-<table border ="1">
-    <tr><h2><.color_tr{color:yellow;}>
-        <th>Thứ 3</th>
-        <th>Thứ 5</th>
-        <th>Thứ 7</th>
+    <h1 align="center">Thời khóa biểu lớp T0908I</h1>
+<table class="table" align="center">
+    <tr>
+        <th class="thu3">Thứ 3</th>
+        <th class="thu3">Thứ 5</th>
+        <th class="thu3">Thứ 7</th>
     </h2></tr>
     <tr><h2>
         <td>CF-T1,L1</td>
