--- a/SS5_Form_Table_Html/thuc_hanh/simpleform.html
+++ b/SS5_Form_Table_Html/thuc_hanh/simpleform.html
@@ -5,7 +5,7 @@
     <title>tạo form đơn giản</title>
 </head>
 <body>
-<form method="get" action="simpleform.html" class ="wufoo">
+<form method="get" action="Simpleform.html" class ="wufoo">
     <h2>Oder Form</h2>
     <p>What would you like to buy?</p>
     <select>
