--- a/SS5_Form_Table_Html/bai_tap/Bai5TaoFormLayThongTinKhachHang.html
+++ b/SS5_Form_Table_Html/bai_tap/Bai5TaoFormLayThongTinKhachHang.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    .khung{
+        border: black solid 1px;
+        width: 40%;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>tạo form lấy survey khách hàng</title>
 </head>
 <body>
-<form method="post"action="https://gallery.wufoo.com/embed/pyej3161l9pt0d/def/embedKey=pyej3161l9pt0d89279)"></form>
+<form method="post"action="https://gallery.wufoo.com/embed/pyej3161l9pt0d/def/embedKey=pyej3161l9pt0d89279"></form>
 </body>
-<input type="Market Research Survey" value="Market Research Survey Please take a few moments to complete this satisfaction survey/">
-<br/>
-<form>
-    what is your age range?<br>
+<p class="khung">Market Research Survey please take a few moments to complete this statisfaction survey.</p>
+<p>what is your age range?</p>
 <select>
     <option value="">18-24</option>
     <option value="">25-36</option>
     <option value="">36-58</option>
-</select>
-</form>
-<br>
-<form>
-    What is your yearly income range<br>
-<select>
+    <p>What is your yearly income range</p>
     <option value="">$0-$25,000</option>
     <option value="">$1-$25,000</option>
     <option value="">$2-$25,000</option>
 </select>
-</form>
-<br>
-<form>
-    Gender<br>
-<input type="radio" name="name"/>Male<br/>
-<input type="radio" name="name"/>Formale<br/>
-</form>
-<br>
-<form>
-    Which of the following products have your purchased in the last 2 months. Please check all that apply.<br>
+<p>Gender</p>
+    <input type="radio" name="name"/>Male<br>
+    <input type="radio" name="name"/>Formale
+<p>Which of the following products have your purchased in the last 2 months. Please check all that apply.</p>
     <input type="checkbox"name="name"/>Product1<br>
     <input type="checkbox"name="name"/>Product2<br>
-    <input type="checkbox" name="name"/>Product3<br>
-</form>
-<br>
-<form>
-How often would you use our new product<br>
+    <input type="checkbox" name="name"/>Product3
+<p>How often would you use our new product</p>
     <input type="radio" name="name"/>Daily<br>
     <input type="radio" name="name"/>Weekly<br>
-    <input type="radio" name="name"/>Monthly<br>
-</form>
+    <input type="radio" name="name"/>Monthly
+<p>What would you pay for the new product?</p>
+    <label>$<input type="text" name=""/>.<input type="text" name=""/></label>
+<p>What features would you like to see in the new product</p>
+<p class="khung"><br>
 <br>
-<form>
-    What would you pay for the new product?<br>
-<label>$<input type="text" name=""/>.<input type="text" name=""/></label>
+<br>
+</p>
+
+
+
+
+
 
 </form>
 </html>
