--- a/SS5_Form_Table_Html/bai_tap/Bai5ThoiKhoaBieu.html
+++ b/SS5_Form_Table_Html/bai_tap/Bai5ThoiKhoaBieu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="thoi_khoa_bieu.css"
+<link rel="stylesheet" type="text/css" href="ThoiKhoaBieu.css"
 <head>
     <meta charset="UTF-8">
     <title>taobangdongian</title>
@@ -12,18 +12,41 @@
         <th class="thu3">Thứ 3</th>
         <th class="thu3">Thứ 5</th>
         <th class="thu3">Thứ 7</th>
-    </h2></tr>
-    <tr><h2>
+    </tr>
+    <tr>
         <td>CF-T1,L1</td>
         <td>CF-T2,L2</td>
         <td>CF-T3,L3</td>
-    </h2></tr>
-    <tr><h2>
+    </tr>
+    <tr>
         <td>CF-T4-L4</td>
         <td>CF-Writen Test</td>
         <td>C-T1-L1</td>
-    </h2>
     </tr>
 </table>
+    <h1>Hãy cập nhật Thời Khóa Biểu</h1>
+    <h1 align="center">THỜI KHÓA BIỂU</h1>
+    <table class="table" align="center">
+        <tr>
+            <th colspan="3"></th>
+            <th class="thu3">Thứ 3</th>
+            <th class="thu3">Thứ 5</th>
+            <th class="thu3">Thứ 7</th>
+        </tr>
+        <tr>
+            <td>Tuần</td>
+            <td>Ngày khởi đầu</td>
+            <td>Ngày kết thúc</td>
+            <td colspan="3">Môn Học</td>
+            <td>CF-T1,L1</td>
+            <td>CF-T2,L2</td>
+            <td>CF-T3,L3</td>
+        </tr>
+        <tr>
+            <td>CF-T4-L4</td>
+            <td>CF-Writen Test</td>
+            <td>C-T1-L1</td>
+        </tr>
+
 </body>
 </html>
