--- a/SS5_Form_Table_Html/bai_tap/Bai5TaoFormLayThongTinKhachHang.html
+++ b/SS5_Form_Table_Html/bai_tap/Bai5TaoFormLayThongTinKhachHang.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-    .khung{
+    .khung {
         border: black solid 1px;
         width: 40%;
+    }
+    .table {
+
     }
 </style>
 <head>
@@ -39,8 +42,18 @@
     <label>$<input type="text" name=""/>.<input type="text" name=""/></label>
 <p>What features would you like to see in the new product</p>
 <p class="khung"><br>
-<br>
-<br>
+<p>Please rate your level of agreement with the following statements.</p>
+<tr>
+    <td></td>
+    <td>Strongly Disagree</td>
+    <td>Disagree</td>
+    <td>Agree</td>
+    <td>Strongly Agree</td>
+</tr>
+<tr>
+    <th>our products are prices </th>
+    <th></th>
+</tr>
 </p>
 
 
