--- a/ss7_bien_va_kieu_du_lieu/bai_tap/Bai1DienTichHinhTron.html
+++ b/ss7_bien_va_kieu_du_lieu/bai_tap/Bai1DienTichHinhTron.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let r = parseInt(prompt("Bán kính hình tròn:"));
-    let S = Math.PI * 2 * r;
+    let S = Math.PI * r * r;
     document.write("Diện tích hình tròn:" +S)
 </script>
 </body>
