--- a/ss7_bien_va_kieu_du_lieu/bai_tap/ChuViHinhTron.html
+++ b/ss7_bien_va_kieu_du_lieu/bai_tap/ChuViHinhTron.html
@@ -5,12 +5,11 @@
     <title>chu vi hình tròn</title>
 </head>
 <body>
-<script !src="">
-    let inputR;
-    inputR= prompt("Nhập bán kính hình tròn");
-    R = parseInt(inputR);
-    C = 2* R * Math.PI;
-    document.write("Chu vi hình tròn: " + R + " = " + C );
+<script>
+    let r = parseInt(prompt("Nhập bán kính hình tròn:"));
+    let C = 2 * r * Math.PI
+    document.write("Chu vi hình tròn:"+ C)
+
 </script>
 </body>
 </html>
