--- a/ss7_bien_va_kieu_du_lieu/bai_tap/DiemTrungBinh.html
+++ b/ss7_bien_va_kieu_du_lieu/bai_tap/DiemTrungBinh.html
@@ -5,7 +5,15 @@
     <title>Tính Điểm Trung Bình</title>
 </head>
 <body>
-
+<script>
+    let a= parseInt(prompt("nhập điểm toán"));
+    let b = parseInt(prompt("Nhập điểm Lý"));
+    let c = parseInt(prompt("Nhập điểm Hóa"));
+    let sum = a + b + c ;
+    document.write("Tổng điểm các môn:" + sum)
+    let trungbinh = sum/3;
+    document.write("Điểm trung bình:"+ trungbinh)
+</script>
 
 
 </body>
