--- a/ss8_cau_truc_dieu_kien_1/thuc_hanh/Bai1LuyenTapVietCauTrucSwitch.html
+++ b/ss8_cau_truc_dieu_kien_1/thuc_hanh/Bai1LuyenTapVietCauTrucSwitch.html
@@ -7,7 +7,7 @@
 <body>
 <p>Bài 1</p>
 <script>
-
+let browser =prompt( "Nhập giá trị");
     switch (browser) {
         case "Edge":
             document.write("You've got the Edge!");
@@ -22,6 +22,5 @@
             alert("We hope that this page looks ok!");
     }
 </script>
-
 </body>
 </html>
