--- a/ss8_cau_truc_dieu_kien_1/thuc_hanh/Bai2LuyenTapVietCauTruc.html
+++ b/ss8_cau_truc_dieu_kien_1/thuc_hanh/Bai2LuyenTapVietCauTruc.html
@@ -5,20 +5,21 @@
     <title></title>
 </head>
 <body>
-<p>bài 2</p>
 <script>
-    let a = prompt('a?', '');
+    let a = parseInt(prompt('a?', ''));
     switch (a) {
         case 0:
-            alert(0);
+            document.write(0);
             break;
         case 1:
-            alert(1);
+            document.write(1);
             break;
         case 2:
         case 3:
-            alert('2,3');
+           document.write('2,3');
             break;
+        default:
+            document.write("chỉ nhập a từ 0 đến 3");
     }
 </script>
 </body>
