--- a/ss8_cau_truc_dieu_kien_1/thuc_hanh/Bai3Cach2KiemTraGiaTriNhapVao.html
+++ b/ss8_cau_truc_dieu_kien_1/thuc_hanh/Bai3Cach2KiemTraGiaTriNhapVao.html
@@ -6,13 +6,17 @@
 </head>
 <body>
 <script>
-    let value =prompt("Nhập Gía Trị a",0);
-    switch (value) {
-        case (value >0);
+    let value = parseInt(prompt("Nhập Gía Trị a", 0));
+
+    switch ((value > 0) ? 1 : (value < 0 ) ? -1 :0) {
+        case 1:
             alert(1);
             break;
-
-
+        case -1:
+            alert(-1);
+            break;
+        default:
+            alert(0);
     }
 </script>
 </body>
