--- a/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_2/DienTichTamGiacVuong.html
+++ b/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_2/DienTichTamGiacVuong.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <script>
-    
+    let a =parseInt(prompt("cạnh bên a"));
+    let b =parseInt(prompt("cạnh bên b"));
+    DT = 1/2*a*b;
+    document.write("diện tích tam giác vuông là : " + DT)
 </script>
 </body>
 </html>
