--- a/ss9_cau_truc_dieu_kien_2/bai_tap/ChiSoCanNang.html
+++ b/ss9_cau_truc_dieu_kien_2/bai_tap/ChiSoCanNang.html
@@ -8,7 +8,7 @@
 <script>
     let weight = prompt("Nhập cân nặng");
     let height= prompt("Nhập chiều cao");
-    BMI = weight/(height*height);
+    let BMI = weight/(height*height);
     if ( BMI < 18.5) {
         document.write("Underweight");
     } else if (BMI<25.0) {
