--- a/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_2/TinhTienDien.html
+++ b/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_2/TinhTienDien.html
@@ -5,6 +5,14 @@
     <title>tính tiền điện</title>
 </head>
 <body>
+<script>
+    let a =parseInt(prompt("chỉ số điện mới"));
+    let b =parseInt(prompt("chỉ số điện cũ"));
+    let dienHienTai =a-b;
+    let vuotDinhMuc= a-b-50;
+    if (vuotDinhMuc===50) {
+    document.write(soDienTieuDung*230);
+    } else if()
 
 </body>
 </html>
