--- a/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_1/Bai4SoSanh3SoNguyen.html
+++ b/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_1/Bai4SoSanh3SoNguyen.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 <script>
-    let a=parseInt(prompt("nhập số nguyên a"));
-    let b=parseInt(prompt("nhập số nguyên b"));
-    let c=parseInt(prompt("nhập số nguyên c"));
-    if (a>b) {
+    let a = parseInt(prompt("nhập số nguyên a"));
+    let b = parseInt(prompt("nhập số nguyên b"));
+    let c = parseInt(prompt("nhập số nguyên c"));
+    if (a > b) {
         if (a > c)
             document.write(a + "là số lớn nhất");
-    } else if (b>c) {
-           document.write(b + "là số lớn nhất");
-        }
-        else {
-           document.write(c + "là số lớn nhất");
-        }
+    } else if (b > c) {
+        document.write(b + "là số lớn nhất");
+    } else {
+        document.write(c + "là số lớn nhất");
+    }
 </script>
 </body>
 </html>
