--- a/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_1/Bai3NhapSoNguyen.html
+++ b/ss9_cau_truc_dieu_kien_2/bai_tap/luyen_tap_cau_truc_dieu_kien_1/Bai3NhapSoNguyen.html
@@ -7,12 +7,12 @@
 <body>
 <script>
     let a=parseInt(prompt("nhập số nguyên a"));
-    if (a!=0) {
-        if (a > 0) {
-            document.write("số mới nhập lớn hơn 0");
+    if (a===0) {
+        alert("không nhập số 0");
+    } else if (a > 0) {
+            document.write("số a lớn hơn 0");
         } else {
-            document.write("số mới nhập nhỏ hơn 0");
-        }
+            document.write("số a nhỏ hơn 0");
     }
 </script>
 </body>
