--- a/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/SuDungVongLapDeDemTu1Den100.html
+++ b/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/SuDungVongLapDeDemTu1Den100.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <script>
-    let a= prompt("nhập số");
-    for ()
-
+    let i=parseInt(prompt("nhập số : "));
+    for (let i=1; i<100; i++) {
+        document.write("")= i ;
+        }
 </script>
 </body>
 </html>
