--- a/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_2/TinhGiaiThuaCuaSoNguyenDuong.html
+++ b/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_2/TinhGiaiThuaCuaSoNguyenDuong.html
@@ -10,7 +10,7 @@
     let giaiThua = 1;
     let i;
     if (n>0) {
-        for (i = 1; i < n; i++) {
+        for (i = 1; i <= n; i++) {
             giaiThua = giaiThua * i;
         }
             document.write("giai thừa của " + n + "=" + giaiThua);
