--- a/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/SuDungVongLapDeDemTu1Den100.html
+++ b/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/SuDungVongLapDeDemTu1Den100.html
@@ -6,10 +6,14 @@
 </head>
 <body>
 <script>
-    let i=parseInt(prompt("nhập số : "));
-    for (let i=1; i<100; i++) {
-        document.write("")= i ;
+    let i=1;
+    for ( let i = 1; i <=100; i++) {
+        if (i == 99) {
+            alert("đã hoàn thành");
         }
+        document.write(i + " ");
+    }
+
 </script>
 </body>
 </html>
