--- a/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/SuDungVongLapDeDemTu1Den100.html
+++ b/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/SuDungVongLapDeDemTu1Den100.html
@@ -11,9 +11,8 @@
         if (i == 99) {
             alert("đã hoàn thành");
         }
-        document.write(i + " ");
+        document.write(i + "<br> ");
     }
-
 </script>
 </body>
 </html>
