--- a/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/InSoCoDieuKien.html
+++ b/ss11_cau_truc_vong_lap_2/bai_tap/luyen_tap_vong_lap_01/InSoCoDieuKien.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 <script>
-    let i=1;
-    for (i = 1; i <=100; i++) {
-        if (i % 3 === 0) {
-            document.write("Fizz");
+    let i = 1;
+    for (i = 1; i <= 100; i++) {
+        if (i % 3 === 0 && i % 5 === 0) {
+            document.write("FizzBuzz <br>");
+        } else if (i % 3 === 0) {
+            document.write("Fizz <br>");
         } else if (i % 5 === 0) {
-            document.write("Buzz");
+            document.write("Buzz <br>");
         } else {
             document.write(i + "<br> ");
         }
