--- a/ss13_mang_2/bai_tap/luyen_tap_1/Bai6TimSoNguyenCoTrongMangKhong.html
+++ b/ss13_mang_2/bai_tap/luyen_tap_1/Bai6TimSoNguyenCoTrongMangKhong.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <script>
-     let myColor = ["Red", "Green", "White", "Black"];
-    document.write(myColor.join()+("<br>"));
-    document.write(myColor.toString());
+    let number = [1,4,8,10,12,21,22,25,28,31];
+    let V =parseInt(prompt("nhập số cần dò"));
+    for ()
+
+
+
 </script>
 </body>
 </html>
