--- a/ss13_mang_2/bai_tap/luyen_tap_1/Bai6TimSoNguyenCoTrongMangKhong.html
+++ b/ss13_mang_2/bai_tap/luyen_tap_1/Bai6TimSoNguyenCoTrongMangKhong.html
@@ -6,11 +6,15 @@
 </head>
 <body>
 <script>
-    let number = [1,4,8,10,12,21,22,25,28,31];
-    let V =parseInt(prompt("nhập số cần dò"));
-    for ()
-
-
+    let number = [1, 4, 8, 10, 12, 21, 22, 25, 28, 31];
+    let V = parseInt(prompt("nhập số cần dò"));
+    for (let i = 0; i < number.length; i++) {
+        if (V === number[i]) {
+            document.write("is in the number"+"<br>");
+        } else {
+            document.write("is not in the number"+"<br>");
+        }
+    }
 
 </script>
 </body>
