--- a/ss13_mang_2/bai_tap/luyen_tap_1/Bai7XoaPhanTuKhoiMang.html
+++ b/ss13_mang_2/bai_tap/luyen_tap_1/Bai7XoaPhanTuKhoiMang.html
@@ -8,16 +8,15 @@
 <script>
     let number = [1, 4, 8, 10, 12, 21, 22, 25, 28, 31];
     let V = parseInt(prompt("nhập số cần dò"));
-    let flag=[0];
     for (let i = 0; i < number.length; i++) {
-        for (let j=i+1;j<number.length;j++) {
-            if (V===number[i]) {
-                number[i]=number[j];
-                number[j]=number[i+1];
-                number[i+1]=0;
+        if (V === number[i]) {
+            for (let j = i; j < number.length - 1; j++) {
+                number[j] = number[j + 1];
             }
+            number[number.length - 1] = 0;
         }
-        }
+    }
+    document.write(number);
 </script>
 </body>
 </html>
