--- a/ss13_mang_2/bai_tap/luyen_tap_2/Bai6NhapMangXoaKiTu.html
+++ b/ss13_mang_2/bai_tap/luyen_tap_2/Bai6NhapMangXoaKiTu.html
@@ -7,8 +7,9 @@
 <body>
 <script>
     let a = [ 'mo-ng','cho','co-vid','đi','qua','nhanh','ch-o','nhân','loại','bớt','khổ'];
+    let v = ("-");
     for (let i=0; i<a.length;i++) {
-        if()
+        if(a[i]===indexof)
 
     }
 
