--- a/ss13_mang_2/bai_tap/luyen_tap_2/Bai3DemSoPhanTu.html
+++ b/ss13_mang_2/bai_tap/luyen_tap_2/Bai3DemSoPhanTu.html
@@ -8,7 +8,7 @@
 <script>
     let a= [1,4,"co",5,"len",11,12,"cac",21,"ban"];
     let demSo=0;
-    for (i=0;i<a.length;i++) {
+    for (let i=0;i<a.length;i++) {
         if (a[i] % 2 ===0 || a[i] % 2 ===1) {
             demSo++
         }
