--- a/ss13_mang_2/bai_tap/ChoiCoCaRo.html
+++ b/ss13_mang_2/bai_tap/ChoiCoCaRo.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<body>
 <table border="1">
     <tr>
         <td></td>
@@ -18,11 +17,11 @@
 </table>
 <p id="display"></p>
 <script>
-    let array = new Array(10);
+    let Array = new Array(10);
     for (let i = 0; i < 10; i++) {
-        array[i] = new Array(10)
+        Array[i] = new Array(10)
         for (let j = 0; j < 10; j++) {
-            array[i][j] = "";
+            Array[i][j] = "";
         }
     }
     let player1 = true;
@@ -33,7 +32,7 @@
         for (let i = 0; i < 10; i++) {
             tableString += '<tr>'
             for (let j = 0; j < 10; j++) {
-                tableString += '<td width="25px" height="25px" onclick="played(' + i + ',' + j + ')">' + array[i][j] + '</td>';
+                tableString += '<td width="25px" height="25px" onclick="played(' + i + ',' + j + ')">' + Array[i][j] + '</td>';
             }
             tableString += '</tr>'
         }
@@ -43,13 +42,13 @@
 
     function played(i, j) {
         if (player1 && !checkPlayed(i, j)) {
-            array[i][j] = "X";
+            Array[i][j] = "X";
             player1 = false;
             if (checkWin()) {
                 alert(" người chơi 1 chiến thắng")
             }
         } else if (!player1 && !checkPlayed(i, j)) {
-            array[i][j] = "O"
+            Array[i][j] = "O"
             player1 = true;
             if (checkWin()) {
                 alert("người chơi 2 chiến thắng")
@@ -60,7 +59,7 @@
     }
 
     function checkPlayed(i, j) {
-        if (array[i][j] == "X" || array[i][j] == "O") {
+        if (Array[i][j] == "X" || Array[i][j] == "O") {
             alert("ô này đã đánh rồi bạn ơi !")
             return true;
         } else {
@@ -71,30 +70,30 @@
     function checkWin() {
         for (let i = 0; i < 10; i++) {
             for (let j = 0; j < 10; j++) {
-                if (array[i][j] == "X") {
-                    if (array[i][j + 1] == "X" && array[i][j + 2] == "X") {
+                if (Array[i][j] == "X") {
+                    if (Array[i][j + 1] == "X" && Array[i][j + 2] == "X") {
                         return true;
                     }
-                    if (array[i + 1][j] == "X" && array[i + 2][j] == "X") {
+                    if (Array[i + 1][j] == "X" && Array[i + 2][j] == "X") {
                         return true;
                     }
-                    if (array[i + 1][j + 1] == "X" && array[i + 2][j + 2] == "X") {
+                    if (Array[i + 1][j + 1] == "X" && Array[i + 2][j + 2] == "X") {
                         return true;
                     }
-                    if (array[i + 1][j - 1] == "X" && array[i + 2][j - 2] == "X") {
+                    if (Array[i + 1][j - 1] == "X" && Array[i + 2][j - 2] == "X") {
                         return true;
                     }
-                } else if (array[i][j] == "O") {
-                    if (array[i][j + 1] == "O" && array[i][j + 2] == "O") {
+                } else if (Array[i][j] == "O") {
+                    if (Array[i][j + 1] == "O" && Array[i][j + 2] == "O") {
                         return true;
                     }
-                    if (array[i + 1][j] == "O" && array[i + 2][j] == "O") {
+                    if (Array[i + 1][j] == "O" && Array[i + 2][j] == "O") {
                         return true;
                     }
-                    if (array[i + 1][j + 1] == "O" && array[i + 2][j + 2] == "O") {
+                    if (Array[i + 1][j + 1] == "O" && Array[i + 2][j + 2] == "O") {
                         return true;
                     }
-                    if (array[i + 1][j - 1] == "O" && array[i + 2][j - 2] == "O") {
+                    if (Array[i + 1][j - 1] == "O" && Array[i + 2][j - 2] == "O") {
                         return true;
                     }
                 }
@@ -103,4 +102,5 @@
         }
     }
 </script>
+</body>
 </html>
