--- a/ss13_mang_2/bai_tap/luyen_tap_1/Bai1HienThiSoNguyenTo.html
+++ b/ss13_mang_2/bai_tap/luyen_tap_1/Bai1HienThiSoNguyenTo.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let number = [1,4,8,10,12,21,22,25,28,31];
-    for (i=1;i<=number.length;i++) {
+    for ( let i=1;i<=number.length;i++) {
         if (number[i]>=10) {
             document.write(number[i] +' ');
         }
