--- a/ss15_ham_2/bai_tap/luyen_tap_1/Bai2TaoHamNhapDoiSoDangSo.html
+++ b/ss15_ham_2/bai_tap/luyen_tap_1/Bai2TaoHamNhapDoiSoDangSo.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 <script>
-
+    function number(a) {
+        a++;
+        return a;
+    }
+    function nhapSo() {
+        let tang = number(prompt("nhập số vào"));
+        alert("ketQua = " + tang);
+    }
+    nhapSo();
 </script>
 </body>
 </html>
