--- a/ss15_ham_2/bai_tap/KiemTraSoNguyenTo.html
+++ b/ss15_ham_2/bai_tap/KiemTraSoNguyenTo.html
@@ -5,11 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<button onclick="alertMessage()">Ấn vào đây</button>
 <script>
-    function alertMessage () {
-        alert("xin chào");
-    }
+function
 </script>
 </body>
 </html>
