--- a/ss15_ham_2/bai_tap/luyen_tap_2/Bai3TinhGiaiThua.html
+++ b/ss15_ham_2/bai_tap/luyen_tap_2/Bai3TinhGiaiThua.html
@@ -6,22 +6,16 @@
 </head>
 <body>
 <script>
-    let a =parseInt(prompt("nhập số a"));
-    function tinhGiaiThua(giaiThua1) {
-        return giaiThua1*i;
-    }
-    if (a>0) {
-        for (let i = 1; i <= a; i++) {
-            giaiThua1 = giaiThua1 * i;
+    function tinhGiaiThua(a) {
+        let result = 1;
+        for (let i=1;i<=a;i++) {
+            result *= i;
         }
-        document.write("giai thừa của " + a + "=" + giaiThua1);
-    } else  if(a===0) {
-        document.write("giai thưà bằng 1");
-    } else {
-        alert("không nhập số nhỏ hơn 0");
+        return result;
     }
-    let ketQua = tinhGiaiThua(giaiThua1);
-    document.write("giai thừa cưa số" + a + "=" + ketQua +"<br>");
+    let number = parseInt(prompt("nhập số cần tính giai thừa"));
+    let ketQua = tinhGiaiThua(number);
+    document.write("giai thừa của số " + number + "là" + ketQua);
 </script>
 </body>
 </html>
