--- a/case_study/yeu_cau_4/Bai3TimKiTuChung.html
+++ b/case_study/yeu_cau_4/Bai3TimKiTuChung.html
@@ -6,11 +6,8 @@
 </head>
 <body>
 <script>
-    let s = prompt("nhập chuỗi");
-    let s1 = sort
-    for(let i=0;i<s.length;i++) {
-
-    }
+    let a=prompt("nhập xâu kí tự 1");
+    let b =prompt("nhập xâu kí tự 2");
 </script>
 </body>
 </html>
