--- a/case_study/yeu_cau_3/Bai2TimPhanTuKhongCoTrongMangA.html
+++ b/case_study/yeu_cau_3/Bai2TimPhanTuKhongCoTrongMangA.html
@@ -6,11 +6,22 @@
 </head>
 <body>
 <script>
-    let a = [2, 3, 4, 8, 2, 10, 4, 5, 6, 7, 8, 9];
-    let b = [1, 2, 3, 5, 11, 4, 21, 5, 6, 20, 7, 8];
+    let a = [];
+    let b = [];
+    let n1 = parseInt(prompt("nhập vào độ dài của mảng a"));
+    let n2 = parseInt(prompt("nhập vào độ dài của mảng b"));
     let result = "";
-    for (let i = 0; i < b.length; i++) {
-        if (a.indexOf(b[i]) === i) {
+    for (let i = 0; i < n1; i++) {
+        let nhap = parseInt(prompt("nhập vào các số nguyên mảng a"));
+        a.push(nhap);
+    }
+
+    for (let i=0;i<n2;i++) {
+        let nhap2 = parseInt(prompt("nhập vào các số nguyên mảng b"));
+        b.push(nhap2);
+    }
+    for (let i=0;i<n2;i++) {
+        if (a.indexOf(b[i]) === -1 && result.indexOf(b[i]) ===-1) {
             result += b[i];
         }
     }
