--- a/case_study/yeu_cau_3/Bai5MenuThucUong.html
+++ b/case_study/yeu_cau_3/Bai5MenuThucUong.html
@@ -14,12 +14,33 @@
         luaChon =parseInt(prompt(menu));
         let soLuong =0;
         let giaCa=0;
-    } while (luaChon ===7 ) {
-        switch () {
-
+    } while (luaChon ===7 ); {
+        switch (luaChon) {
+            case 1:
+                giaCa=12000;
+                break;
+            case 2:
+                giaCa=15000;
+                break;
+            case 3:
+                giaCa=15000;
+                break;
+            case 4:
+                giaCa=15000;
+                break;
+            case 5:
+                giaCa=8000;
+                break;
+            case 6:
+                giaCa=15000;
+                break;
+            default:
+                continue;
         }
+        soLuong =parseInt(prompt("nhập vào số lượng đồ uống"));
 
     }
+    while (luaChon ===7 );
 
 </script>
 </body>
