--- a/case_study/yeu_cau_4/Bai1BienDoiXauKiTu.html
+++ b/case_study/yeu_cau_4/Bai1BienDoiXauKiTu.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let a = prompt("Nhap vao chuoi can doi")
+    let a = prompt("Nhap vao chuoi can doi");
     let b = a.toLowerCase().split(" ");
     let max = "";
     let kiTuDaiNhat = "";
